# mlir-playground-project

./: CMakeLists.txt  README.md
--MLIR-Generated/: TestOps.cpp.inc  TestOps.cpp.inc.d  TestOps.h.inc  TestOps.h.inc.d  TestOpsDialect.cpp.inc  TestOpsDialect.cpp.inc.d  TestOpsDialect.h.inc  TestOpsDialect.h.inc.d  TestOpsTypes.cpp.inc.d  TestOpsTypes.h.inc.d
include/: CMakeLists.txt
include/Standalone/: CMakeLists.txt  StandaloneOps.td
include/TestDialect/: CMakeLists.txt  Interfaces.h  Interfaces.td  MLIRGen.h  Optimisations.h  Passes.h  TestDialect.h  TestDialect.td  TestOps.h  TestOps.td
include/ast/: AST.h  Lexer.h  Parser.h
lib/: CMakeLists.txt
lib/Test/: CMakeLists.txt  Interfaces.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  Optimisations.cpp  Optimisations.td  Passes.cpp  TestDialect.cpp  TestOps.cpp
lib/ast/: AST.cpp  CMakeLists.txt
test/: CMakeLists.txt
test-compiler/: CMakeLists.txt  test-compiler.cpp  toy-compile.cpp
test/TestDialect/: affine.test  double-transpose.test  inliner-test.mlir.x  inliner.test  test-script-with-function.ast  test-script.ast  two-structs.test
